[package]
name = "nulla-faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subxt = "0.37"
sp-keyring = "39.0"
sp-core = "34.0"
# Use the same alias as wallet to ensure Scalar/RistrettoPoint types match across crates
curve25519-dalek-v4 = { package = "curve25519-dalek", version = "4.0", features = ["rand_core"] }
rand = "0.8"
blake2 = "0.10"
hex = "0.4"
parity-scale-codec = { version = "3.7.4", features = ["derive"] }
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }

[dependencies.wallet]
path = "../wallet"

[dependencies.verifier]
path = "../verifier"