[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.7.4", features = ["derive"] }
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
subxt = { version = "0.37", features = ["substrate-compat", "unstable-metadata"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
# Use curve25519-dalek v4 for wallet's public API types
curve25519-dalek-v4 = { package = "curve25519-dalek", version = "4", features = ["alloc", "rand_core"] }
merlin = "3"
rand = "0.8"
# Align Bulletproofs to v4 to match on-chain verifier format
bulletproofs = { version = "4" }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sp-keyring = "41.0"
sp-core = "34.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
# Also depend on curve25519-dalek v3 (unaliased) for Bulletproofs v4 internals
# Switch to curve25519-dalek-ng v4 for Bulletproofs v4 interop
curve25519-dalek-ng = { version = "4" }

# For example RPC submission later; not used yet
# subxt = { version = "0.37", default-features = false, features = ["jsonrpsee"] }

[lib]
name = "wallet"
path = "src/lib.rs"

[features]
# Enable typed Subxt bindings and typed scan event decoding. Requires node running at build-time.
typed-scan = []

[[bin]]
name = "wallet-demo"
path = "src/main.rs"

[[bin]]
name = "nulla-wallet"
path = "src/bin/nulla-wallet.rs"
